--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 author: Neel Patel
-title: 
+title: A title
 header-img: img/home-bg.png
 email: neel@hotmail.com
 copyright_name: Neel Patel
 description: > # this means to ignore newlines until "baseurl:"
-  
+  A subtitle
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  neelfx
